List *-- AbstractList
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AbstractList
AbstractList <|-- ArrayList

@startuml
skinparam classAttributeIconSize 0
skinparam class {
BackgroundColor White
ArrowColor Black
BorderColor Black
}

Cell *-- Point
Cell *-- Entrance
Cell *-- Exit
Cell *-- Cage
Cell *-- Road

class Cell {
-Point P[][];
-int Size_X;
-int Size_Y;
-Entrance masuk;
-Exit keluar;
-Cage kandang[];
-final int max_kandang;
-Road rd[];
-int jumlah_road;
-final int max_road;
-int jumlah_kandang;
+Cell()
+Cell(int _X, int _Y, int mkandang, int mroad, Entrance ent, Exit ext)
+void SetPoint(int i, int j, char cc)
+void SetCage(Cage cg)
+void SetRoad(Road jalan)
+void DisplayMap()
+void PrintMatriks()
+void PrintMap()
+void PrintFoodReq()
+void Tour()
+boolean CheckAvail(int x, int y)
+StringBuffer FindCage(Point p)
}


class Road {
-Point p
-char cc
+Road()
+Road(int x, int y)
+Point GetPoint()
+char GetRender()
}
class Entrance {
-Point p
-char cc
+Entrance()
+Entrance(int x, int y)
+Point GetPoint()
+char GetRender()
}
class Exit {
-Point p
-char cc
+Exit()
+Exit(int x, int y)
+Point GetPoint()
+char GetRender()
}
class Point {
-int x;
-int y;
-char cc;
+Point()
+Point(int _x, int _y, char _cc)
+int GetX()
+int GetY()
+char GetChar()
+void SetChar(char c)
+void SetX(int _x)
+void SetY(int _y)
}

Cage *-- Point

class Cage {
-Point ani_loc[]
-String ani_exp[]
-char[] list_musuh
-int jumlah_hewan
-Point list_habitat[]
-int jumlah_habitat
-int tipe_kandang
-final int max_hewan = 20
-final int max_habitat = 50


+Cage()
+Point GetAniLoc(int i)
+String GetAniExp(int i)
+void SetTipeKandang(int i)
+int GetTipeKandang()
+void SetHabitat(int x, int y, char render, int tipe_habitat){
+Point GetHabitat(int idx){
+void SetHewan(int i, int j,int[] tipe_hewan, char render, String exp, char l_musuh)
+StringBuffer GetExperience()
+void SemuaGerak(){
+void HewanGerak(int id)
+boolean AvailGerak(int x, int y)
}

class Point {
-int x;
-int y;
-char cc;
+Point()
+Point(int _x, int _y, char _cc)
+int GetX()
+int GetY()
+char GetChar()
+void SetChar(char c)
+void SetX(int _x)
+void SetY(int _y)
}

@enduml